# stjerm

./: .gitignore  AUTHORS  CHANGES.md  ChangeLog  INSTALL  Makefile  Makefile.am  README  README.md  autogen.sh  changes.md  colortabs.c  compile  config.c  config.mk  configure  configure.ac  grabkey.c  install  main.c  mainwindow.c  make  popupmenu.c  preferences.glade  shortcut.c  stjerm.h  term.c  termbook.c  uninstall  waitkey.c
data/: stjerm.8  stjerm.glade
doc/: Makefile.am  stjerm.8
src/: AboutDialog.cs  Config.cs  ConfigDialog.cs  Main.cs  MainWindow.cs  Makefile.am  PopupMenu.cs  PreferencesDialog.cs  STerm.cs  StjermInfo.cs  StjermWindow.cc  StjermWindow.h  TermBook.cs  config.c  main.c  main.cc  mainwindow.c  popupmenu.c  prefswindow.c  shortcut.c  stjerm.h  term.c
